Fixing authority CSS alignment

--- a/core/app/assets/stylesheets/frontend.css.less
+++ b/core/app/assets/stylesheets/frontend.css.less
@@ -141,6 +141,10 @@ a.bookmarklet {
       font-size: 11px;
     }
   }
+  .user-block .authority {
+  	padding: 0;
+  	margin: 0;
+  }
   form {
     .row {
       padding: 10px 0px;
